Dashboard dinamico, estilos y enviroments

--- a/src/app/admin/components/side-menu/side-menu.component.html
+++ b/src/app/admin/components/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 <div
   id="menu"
-  class="bg-primary-950 min-h-screen z-10 text-slate-300 w-64 fixed left-0 h-screen rounded-tr-3xl shadow-md shadow-r-md"
+  class="bg-primary-950 z-10 text-slate-300 w-64 fixed h-[98vh] rounded-xl shadow-md shadow-r-md"
 >
   <!-- SIDE-MENU-HEADER -->
   <admin-side-menu-header />
