--- a/src/app/admin/components/side-menu/side-menu-header/side-menu-header.component.html
+++ b/src/app/admin/components/side-menu/side-menu-header/side-menu-header.component.html
@@ -1,11 +1,14 @@
 <section id="logo" class="mt-4 px-6">
   <h1 class="text-lg md:text-2xl font-bold text-white">
-    Power<span class="text-secondary-500">Core</span>.
+    {{ envs.companyName
+    }}<span class="text-secondary-500">{{ envs.companyName2 }}</span
+    >.
   </h1>
   <hr class="text-secondary-500 mt-1 h-4 border-t-2 border-secondary-500" />
+  <!-- <p class="text-slate-500 text-sm">{{ envs.companySlogan }}</p> -->
 </section>
 
-<section id="profile" class="px-6 py-10">
+<section id="profile" class="px-6 pb-10">
   <p class="text-slate-400 mb-1">Bienvenido de nuevo,</p>
   <a href="#" class="inline-flex space-x-2 items-center">
     <span>
