--- a/src/app/admin/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/pages/dashboard-page/dashboard-page.component.html
@@ -5,7 +5,9 @@
     <!-- SIDE MENU -->
     <admin-side-menu />
 
-    <article class="ml-64 px-4 mt-6 flex flex-col flex-1 w-fit h-fit text-text">
+    <article
+      class="ml-64 px-4 mt-6 flex flex-col flex-1 w-fit h-full text-text"
+    >
       <router-outlet />
     </article>
   </section>
