--- a/src/app/admin/pages/home-page/home-page.component.html
+++ b/src/app/admin/pages/home-page/home-page.component.html
@@ -1,1 +1,22 @@
-<p>home-page works!</p>,
+<nav class="flex text-slate-400 text-sm mb-6" aria-label="Breadcrumb">
+  <ol class="inline-flex items-center space-x-1 md:space-x-3">
+    <li class="inline-flex items-center hover:cursor-pointer">
+      <a class="inline-flex items-center"> Dashboard </a>
+    </li>
+    <a>/</a>
+    <li>
+      <div class="flex items-center">
+        <a class="text-text">Inicio</a>
+      </div>
+    </li>
+  </ol>
+</nav>
+
+<section class="mb-5">
+  <h2 class="font-bold text-2xl text-text">Dashboard</h2>
+  <p class="text-slate-600">Revisa los registros y próximos eventos</p>
+</section>
+
+<div class="flex flex-wrap gap-x-10 gap-y-6 w-full">
+  <admin-page-stats-card />
+</div>
