--- a/src/app/admin/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/pages/dashboard-page/dashboard-page.component.html
@@ -8,6 +8,7 @@
     <article
       class="ml-64 px-4 mt-6 flex flex-col flex-1 w-fit h-full text-text"
     >
+      <app-breadcrumbs />
       <router-outlet />
     </article>
   </section>
