--- a/src/app/admin/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/admin/components/breadcrumbs/breadcrumbs.component.html
@@ -1,17 +1,14 @@
 <nav class="flex text-slate-400 text-sm mb-6" aria-label="Breadcrumb">
   <ol class="inline-flex items-center space-x-1 md:space-x-3">
-    @for (crumb of breadcrumbs; track crumb.route; let last = $last) {
+    @for (crumb of breadcrumbs; track crumb.route) {
     <li class="inline-flex items-center hover:cursor-pointer">
-      <a class="inline-flex items-center"> Dashboard </a>
+      <p class="inline-flex items-center" [routerLink]="crumb.route">
+        Dashboard
+      </p>
     </li>
-    <a>/</a>
+    <p>/</p>
     <li class="inline-flex items-center">
-      <a [routerLink]="crumb.route" [class.text-text]="last">{{
-        crumb.label
-      }}</a>
-      @if (!last) {
-      <span class="mx-2">/</span>
-      }
+      <p class="text-text">{{ crumb.label }}</p>
     </li>
     }
   </ol>
