--- a/src/app/admin/pages/users-page/users-page.component.html
+++ b/src/app/admin/pages/users-page/users-page.component.html
@@ -1,1 +1,55 @@
-<p>users-page works!</p>,
+<section class="gap-y-6 w-full">
+  <!-- GRID LAYOUT: Tabla Izquierda / Movimientos Derecha -->
+  <div class="gap-6">
+    <!-- Tabla de atletas (2/3 del ancho en desktop) -->
+    <div class="lg:col-span-2">
+      <div class="bg-white rounded-lg shadow">
+        <table class="min-w-full divide-y divide-gray-200">
+          <thead>
+            <admin-user-list-header />
+          </thead>
+          <tbody class="divide-y divide-gray-200">
+            <admin-user-list [users]="userService.users()" />
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- <tbody class="divide-y divide-gray-200">
+            <tr>
+              <td class="px-6 py-4 flex items-center">
+                <img
+                  class="w-10 h-10 rounded-lg mr-4"
+                  src="https://randomuser.me/api/portraits/men/32.jpg"
+                  alt="John Michael"
+                />
+                <div>
+                  <div class="font-semibold text-gray-900">
+                    Alfonso Ramírez Mestanza
+                  </div>
+                  <div class="text-sm text-gray-500">
+                    aramirezmes03gmail.com
+                  </div>
+                </div>
+              </td>
+              <td class="px-6 py-4">
+                <div class="font-semibold text-gray-700">
+                  PROJECT STRENGTH Málaga
+                </div>
+              </td>
+              <td class="px-6 py-4">
+                <span
+                  class="inline-block px-3 py-1 text-xs font-bold rounded bg-green-500 text-white"
+                  >ACTIVO</span
+                >
+              </td>
+              <td class="px-6 py-4 text-gray-700">28/02/25</td>
+              <td class="px-6 py-4">
+                <a href="#" class="text-indigo-600 underline font-medium"
+                  >Modificar</a
+                >
+              </td>
+            </tr>
+          </tbody> -->
