--- a/src/app/auth/pages/login-register/login-page.component.html
+++ b/src/app/auth/pages/login-register/login-page.component.html
@@ -3,7 +3,11 @@
 >
   Inicia sesión en tu cuenta
 </h1>
-<form class="space-y-4 md:space-y-6" action="#">
+<form
+  class="space-y-4 md:space-y-6"
+  [formGroup]="loginForm"
+  (ngSubmit)="onSubmit()"
+>
   <section>
     <label
       for="email"
@@ -12,11 +16,9 @@
     >
     <input
       type="email"
-      name="email"
-      id="email"
       class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       placeholder="name@company.com"
-      required=""
+      formControlName="email"
     />
   </section>
   <section>
@@ -27,11 +29,9 @@
     >
     <input
       type="password"
-      name="password"
-      id="password"
       placeholder="••••••••"
       class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      required=""
+      formControlName="password"
     />
   </section>
   <section class="flex items-center justify-between">
@@ -42,7 +42,6 @@
           aria-describedby="remember"
           type="checkbox"
           class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-          required=""
         />
       </div>
       <div class="ml-3 text-sm">
@@ -64,6 +63,9 @@
   >
     Iniciar sesión
   </button>
+  @if (hasError()) {
+  <p>Credenciales invalidas</p>
+  }
   <p class="text-sm font-light text-gray-500 dark:text-gray-400">
     ¿No tienes cuenta?
     <a
