--- a/src/app/admin/components/side-menu/side-menu-options/side-menu-options.component.html
+++ b/src/app/admin/components/side-menu/side-menu-options/side-menu-options.component.html
@@ -1,5 +1,30 @@
 <section id="nav" class="w-full px-4">
-  @for (item of menuOptions; track item.route; let i = $index) {
+  @for (item of menuOptions; track item.route; let i = $index) { @if (item.label
+  === 'Cerrar sesión') {
+  <h4
+    [routerLink]="item.route"
+    routerLinkActive="bg-secondary-500"
+    #rla="routerLinkActive"
+    class="w-full px-2 inline-flex space-x-2 items-center rounded-xl py-3 text-error-500 hover:bg-error-500/20 transition ease-linear duration-150"
+  >
+    <article>
+      <img
+        [src]="item.icon + (rla.isActive ? '.svg' : '.svg')"
+        [alt]="item.label + ' Icon'"
+        class="w-6 h-6"
+      />
+    </article>
+    <article class="flex flex-col">
+      <p
+        class="text-l font-bold text-error-500 hover:cursor-pointer"
+        (click)="authService.logout()"
+      >
+        {{ item.label }}
+      </p>
+    </article>
+  </h4>
+
+  } @else {
   <a
     [routerLink]="item.route"
     routerLinkActive="bg-secondary-500"
@@ -26,5 +51,5 @@
   </a>
   @if(i < menuOptions.length - 1) {
   <hr class="text-secondary-500 my-1 border-t-1 border-secondary-500" />
-  } }
+  } } }
 </section>
