--- a/src/app/auth/pages/login-register/login-page.component.html
+++ b/src/app/auth/pages/login-register/login-page.component.html
@@ -69,7 +69,7 @@
   <p class="text-sm font-light text-gray-500 dark:text-gray-400">
     ¿No tienes cuenta?
     <a
-      routerLink="'/auth/register'"
+      routerLink="/auth/register"
       class="font-medium text-primary-600 dark:text-primary-200 underline"
       >Regístrate</a
     >
