--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -3,8 +3,25 @@
 >
   Crea una cuenta
 </h1>
-<form class="space-y-4 md:space-y-6" action="#">
-  <div>
+<form
+  class="space-y-4 md:space-y-6"
+  [formGroup]="registerForm"
+  (ngSubmit)="onSubmit()"
+>
+  <section>
+    <label
+      for="name"
+      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+      >Nombre completo</label
+    >
+    <input
+      type="text"
+      class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+      placeholder="Alfonso Ramírez Mestanza"
+      formControlName="name"
+    />
+  </section>
+  <section>
     <label
       for="email"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -12,14 +29,12 @@
     >
     <input
       type="email"
-      name="email"
-      id="email"
       class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       placeholder="name@company.com"
-      required=""
+      formControlName="email"
     />
-  </div>
-  <div>
+  </section>
+  <section>
     <label
       for="password"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
@@ -27,37 +42,34 @@
     >
     <input
       type="password"
-      name="password"
-      id="password"
       placeholder="••••••••"
       class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      required=""
+      formControlName="password"
     />
-  </div>
-  <div class="flex items-center justify-between">
-    <div class="flex items-start">
-      <div class="flex items-center h-5">
-        <input
-          id="remember"
-          aria-describedby="remember"
-          type="checkbox"
-          class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
-          required=""
-        />
-      </div>
-      <div class="ml-3 text-sm">
-        <label for="remember" class="text-gray-500 dark:text-gray-300"
-          >Recordarme</label
-        >
-      </div>
-    </div>
-  </div>
+  </section>
+  <section>
+    <label
+      for="password"
+      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+      >Confirmar contraseña</label
+    >
+    <input
+      type="password"
+      placeholder="••••••••"
+      class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      formControlName="confirmPassword"
+    />
+  </section>
+
   <button
     type="submit"
     class="w-full text-text text-md font-medium bg-secondary-500 hover:bg-secondary-600 focus:ring-2 focus:outline-none focus:ring-secondary-300 rounded-lg px-5 py-2.5 text-center dark:bg-secondary-500 dark:hover:bg-secondary-700 dark:focus:ring-secondary-800"
   >
-    Iniciar sesión
+    Registrarse
   </button>
+  @if (hasError()) {
+  <p class="text-error-500 text-center">{{ errorMessage }}</p>
+  }
   <p class="text-sm font-light text-gray-500 dark:text-gray-400">
     ¿Ya tienes cuenta?
     <a
