--- a/src/app/admin/pages/users-page/users-page.component.html
+++ b/src/app/admin/pages/users-page/users-page.component.html
@@ -1,6 +1,19 @@
-<section class="gap-y-6 w-full">
-  <!-- Tabla de atletas (2/3 del ancho en desktop) -->
-  <article class="bg-white rounded-lg shadow">
+<section class="bg-white rounded-lg shadow flex flex-col h-[70vh]">
+  <article class="flex items-center gap-2 px-5 pt-5">
+    <input
+      type="text"
+      placeholder="Buscar usuario..."
+      class="flex-1 bg-neutral-50/70 rounded-lg px-3 py-2 focus:outline-none focus:ring-0 focus:border-transparent placeholder:text-gray-600"
+    />
+
+    <button
+      class="ml-2 bg-secondary-500 text-text font-medium px-4 py-2 rounded-lg hover:cursor-pointer hover:bg-secondary-600 transition ease-linear duration-150"
+    >
+      Crear usuario
+    </button>
+  </article>
+
+  <article class="flex-1 overflow-y-auto px-5 pb-5">
     <admin-user-table [users]="userService.users()" />
   </article>
 </section>
