--- a/src/app/admin/components/side-menu/side-menu-options/side-menu-options.component.html
+++ b/src/app/admin/components/side-menu/side-menu-options/side-menu-options.component.html
@@ -3,22 +3,14 @@
   === 'Cerrar sesión') {
   <h4
     [routerLink]="item.route"
-    routerLinkActive="bg-secondary-500"
-    #rla="routerLinkActive"
-    class="w-full px-2 inline-flex space-x-2 items-center rounded-xl py-3 text-error-500 hover:bg-error-500/20 transition ease-linear duration-150"
+    class="w-full px-2 inline-flex space-x-2 items-center rounded-xl py-3 text-error-500 hover:cursor-pointer hover:bg-error-500/20 transition ease-linear duration-150"
+    (click)="authService.logout()"
   >
     <article>
-      <img
-        [src]="item.icon + (rla.isActive ? '.svg' : '.svg')"
-        [alt]="item.label + ' Icon'"
-        class="w-6 h-6"
-      />
+      <img [src]="item.icon" [alt]="item.label + ' Icon'" class="w-6 h-6" />
     </article>
     <article class="flex flex-col">
-      <p
-        class="text-l font-bold text-error-500 hover:cursor-pointer"
-        (click)="authService.logout()"
-      >
+      <p class="text-l font-bold text-error-500">
         {{ item.label }}
       </p>
     </article>
