--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -17,7 +17,7 @@
     <input
       type="email"
       class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-      placeholder="name@company.com"
+      placeholder="eduardo@gmail.com"
       formControlName="email"
     />
   </section>
@@ -41,25 +41,26 @@
           id="remember"
           aria-describedby="remember"
           type="checkbox"
-          class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
+          class="w-4 h-4 cursor-pointer"
         />
       </div>
       <div class="ml-3 text-sm">
-        <label for="remember" class="text-gray-500 dark:text-gray-300"
+        <label
+          for="remember"
+          class="text-gray-500 dark:text-gray-300 cursor-pointer"
           >Recordarme</label
         >
       </div>
     </div>
     <a
-      href="#"
-      class="text-sm font-medium text-white hover:underline dark:text-primary-200 underline"
+      class="text-sm font-medium text-white hover:underline dark:text-primary-200 underline cursor-pointer"
     >
       ¿Contraseña olvidada?</a
     >
   </section>
   <button
     type="submit"
-    class="w-full text-text text-md font-medium bg-secondary-500 hover:bg-secondary-600 focus:ring-2 focus:outline-none focus:ring-secondary-300 rounded-lg px-5 py-2.5 text-center dark:bg-secondary-500 dark:hover:bg-secondary-700 dark:focus:ring-secondary-800"
+    class="cursor-pointer w-full text-text text-md font-medium bg-secondary-500 hover:bg-secondary-600 rounded-lg px-5 py-2.5 text-center dark:bg-secondary-500 dark:hover:bg-secondary-700"
   >
     Iniciar sesión
   </button>
