--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -38,10 +38,10 @@
     <div class="flex items-start">
       <div class="flex items-center h-5">
         <input
-          id="remember"
           aria-describedby="remember"
           type="checkbox"
           class="w-4 h-4 cursor-pointer"
+          formControlName="rememberMe"
         />
       </div>
       <div class="ml-3 text-sm">
