--- a/src/app/auth/layout/auth-layout/auth-layout.component.html
+++ b/src/app/auth/layout/auth-layout/auth-layout.component.html
@@ -1,9 +1,9 @@
-<section class="bg-gray-50 dark:bg-gray-900 h-screen cursor-default">
+<section class="bg-gray-50 dark:bg-gray-900 h-screen w-screen cursor-default">
   <div
-    class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0"
+    class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0 w-screen"
   >
     <a
-      class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white"
+      class="flex items-center mb-2 text-2xl font-semibold text-gray-900 dark:text-white"
     >
       <img
         class="h-8 mr-2"
@@ -14,7 +14,7 @@
       }}<span class="text-secondary-500">{{ envs.companyName2 }}</span>
     </a>
     <div
-      class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700"
+      class="w-[50%] bg-white rounded-lg shadow dark:border md:mt-0 xl:p-0 dark:bg-gray-800 dark:border-gray-700"
     >
       <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
         <router-outlet />
